--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="card ">
                         <div class="card-body d-flex justify-content-center">
                             <a class="btn btn-success btn-lg mb-0 me-3 col-3 text-center d-flex align-items-center justify-content-center" target=""
-                               href="chamadoia.html">Abrir chamado</a>
+                               href="chamado-ia.html">Abrir chamado</a>
                             <a class="btn btn-success btn-lg mb-0 col-3 text-center d-flex align-items-center justify-content-center" target=""
                                href="meuchamados.html">Meus chamados</a>
                         </div>
