--- a/meuchamados.html
+++ b/meuchamados.html
@@ -50,7 +50,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link active" href="./comunicados.html">
+          <a class="nav-link active" href="#">
             <div
               class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <img src="./img/icons/comunicado_selected.png" alt="" class="avatar-post">
