feat: adicionando funcao de login

--- a/chamado-ia.html
+++ b/chamado-ia.html
@@ -178,7 +178,7 @@
 
             </li>
             <li class="nav-item d-flex align-items-center">
-              <a href="" class="nav-link text-body font-weight-bold px-0">
+              <a href="#" id="logoutButton" class="nav-link text-body font-weight-bold px-0">
                 <img src="../img/icons/sair.png" alt="" class="avatar-post">
                 <span class="d-sm-inline d-none text-schneider">Sair</span>
               </a>
@@ -330,6 +330,7 @@
   <script src="../js/sapceison.min.js?v=1.0.7"></script>
   <script src="./js/script.js"></script>
   <script src="./js/comunicacao_gemini.js"></script>
+  <script src="./js/auth.js"></script>
 
 
 </body>
