--- a/Login.html
+++ b/Login.html
@@ -9,12 +9,14 @@
 
 
   <title>
-      Login • Help Desk
+    Login • Help Desk
   </title>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
+    name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- CSS Files -->
   <link href="./css/bootstrap.min.css" rel="stylesheet" />
   <link href="./css/now-ui-kit.css" rel="stylesheet" />
@@ -27,16 +29,19 @@
   <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
+        <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip"
+          title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
           Coders.Fi
         </a>
-        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+          aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar top-bar"></span>
           <span class="navbar-toggler-bar middle-bar"></span>
           <span class="navbar-toggler-bar bottom-bar"></span>
         </button>
       </div>
-      <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="./img/blurred-image-1.jpg">
+      <div class="collapse navbar-collapse justify-content-end" id="navigation"
+        data-nav-image="./img/blurred-image-1.jpg">
         <ul class="navbar-nav">
           <!-- <li class="nav-item">
             <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
@@ -65,19 +70,22 @@
             </a>
           </li> -->
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
+            <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom"
+              href="https://twitter.com/CreativeTim" target="_blank">
               <i class="fab fa-twitter"></i>
               <p class="d-lg-none d-xl-none">Twitter</p>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
+            <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom"
+              href="https://www.facebook.com/CreativeTim" target="_blank">
               <i class="fab fa-facebook-square"></i>
               <p class="d-lg-none d-xl-none">Facebook</p>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
+            <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom"
+              href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
               <i class="fab fa-instagram"></i>
               <p class="d-lg-none d-xl-none">Instagram</p>
             </a>
@@ -102,7 +110,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-user"></i></span>
               </div>
-              <input type="text" class="form-control" placeholder="Usuário">
+              <input type="email" id="emailInput" class="form-control" placeholder="Usuário">
             </div>
           </div>
           <br>
@@ -111,11 +119,12 @@
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="fa fa-lock"></i></span>
               </div>
-              <input type="text" class="form-control" placeholder="Senha">
+              <input type="password" id="passwordInput" class="form-control" placeholder="Senha">
             </div>
             <div>
-              <a href="index.html" class="btn btn-primary btn-round btn" target="">Acessar</a>
-              <a href="https://nucleoapp.com/?ref=1712" class="btn btn-outline-primary btn-round btn" target="_blank">Esqueci a senha</a>
+              <button id="loginButton" class="btn btn-primary btn-round btn">Acessar</button>
+              <a href="https://nucleoapp.com/?ref=1712" class="btn btn-outline-primary btn-round btn"
+                target="_blank">Esqueci a senha</a>
             </div>
           </div>
 
@@ -127,61 +136,66 @@
           <a href="https://www.creative-tim.com" target="_blank">
             <img src="./img/creative-tim-white-slim2.png" class="creative-tim-logo" />
           </a>.</h6> -->
-      <!-- </div> -->
-    </div>
-
-    <!-- Sart Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header justify-content-center">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-              <i class="now-ui-icons ui-1_simple-remove"></i>
-            </button>
-            <h4 class="title title-up">Modal title</h4>
-          </div>
-          <div class="modal-body">
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
-            </p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default">Nice Button</button>
-            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-          </div>
-        </div>
+        <!-- </div> -->
       </div>
-    </div>
-    <!--  End Modal -->
-    <!-- Mini Modal -->
-    <div class="modal fade modal-mini modal-primary" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header justify-content-center">
-            <div class="modal-profile">
-              <i class="now-ui-icons users_circle-08"></i>
+
+      <!-- Sart Modal -->
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header justify-content-center">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                <i class="now-ui-icons ui-1_simple-remove"></i>
+              </button>
+              <h4 class="title title-up">Modal title</h4>
+            </div>
+            <div class="modal-body">
+              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+                blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language
+                ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It
+                is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default">Nice Button</button>
+              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             </div>
           </div>
-          <div class="modal-body">
-            <p>Always have an access to your profile</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-link btn-neutral">Back</button>
-            <button type="button" class="btn btn-link btn-neutral" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      <!--  End Modal -->
+      <!-- Mini Modal -->
+      <div class="modal fade modal-mini modal-primary" id="myModal1" tabindex="-1" role="dialog"
+        aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header justify-content-center">
+              <div class="modal-profile">
+                <i class="now-ui-icons users_circle-08"></i>
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>Always have an access to your profile</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-link btn-neutral">Back</button>
+              <button type="button" class="btn btn-link btn-neutral" data-dismiss="modal">Close</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- StartFooter -->
-    <footer class="footer" data-background-color="blacktransparent">
-      <div class=" container ">
-        <nav>
-          <ul>
-            <li>
-              <!-- <a href="https://www.creative-tim.com">
+      <!-- StartFooter -->
+      <footer class="footer" data-background-color="blacktransparent">
+        <div class=" container ">
+          <nav>
+            <ul>
+              <li>
+                <!-- <a href="https://www.creative-tim.com">
                 Sobre nós
               </a> -->
-            <!-- </li>
+                <!-- </li>
             <li>
               <a href="http://presentation.creative-tim.com">
                 About Us
@@ -192,9 +206,9 @@
                 Blog
               </a>
             </li> -->
-          </ul>
-        </nav>
-        <!-- <div class="copyright" id="copyright">
+            </ul>
+          </nav>
+          <!-- <div class="copyright" id="copyright">
           &copy;
           <script>
             document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
@@ -202,54 +216,56 @@
           <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
           <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
         </div> -->
-        <div class="copyright text-center text-sm text-lg-start">
-          ©
-          <script>
-            document.write(new Date().getFullYear())
-          </script>,
-          desenvolvido com <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-            <style>
-              svg {
-                fill: #009530
-              }
-            </style>
-            <path
-              d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" />
-          </svg> por
-          <a href="../quem-somos.html" class="font-weight-bold" target="_parent">CodersFi</a>
-          para um mundo mais sustentável.
+          <div class="copyright text-center text-sm text-lg-start">
+            ©
+            <script>
+              document.write(new Date().getFullYear())
+            </script>,
+            desenvolvido com <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+              <style>
+                svg {
+                  fill: #009530
+                }
+              </style>
+              <path
+                d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" />
+            </svg> por
+            <a href="../quem-somos.html" class="font-weight-bold" target="_parent">CodersFi</a>
+            para um mundo mais sustentável.
+          </div>
         </div>
-      </div>
-    </footer>
-  <!--   Core JS Files   -->
-  <script src="./js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="./js/core/popper.min.js" type="text/javascript"></script>
-  <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
-  <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-  <script src="./js/plugins/bootstrap-switch.js"></script>
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="./js/plugins/nouislider.min.js" type="text/javascript"></script>
-  <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-  <script src="./js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-  <script src="./js/now-ui-kit.js?v=1.3.0" type="text/javascript"></script>
-  <script>
-    $(document).ready(function() {
-      // the body of this function is in js/now-ui-kit.js
-      nowuiKit.initSliders();
-    });
+      </footer>
+      <!--   Core JS Files   -->
+      <script src="./js/core/jquery.min.js" type="text/javascript"></script>
+      <script src="./js/core/popper.min.js" type="text/javascript"></script>
+      <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
+      <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
+      <script src="./js/plugins/bootstrap-switch.js"></script>
+      <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+      <script src="./js/plugins/nouislider.min.js" type="text/javascript"></script>
+      <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
+      <script src="./js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
+      <!--  Google Maps Plugin    -->
+      <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+      <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
+      <script src="./js/now-ui-kit.js?v=1.3.0" type="text/javascript"></script>
+      <script>
+        $(document).ready(function () {
+          // the body of this function is in js/now-ui-kit.js
+          nowuiKit.initSliders();
+        });
 
-    function scrollToDownload() {
+        function scrollToDownload() {
 
-      if ($('.section-download').length != 0) {
-        $("html, body").animate({
-          scrollTop: $('.section-download').offset().top
-        }, 1000);
-      }
-    }
-  </script>
+          if ($('.section-download').length != 0) {
+            $("html, body").animate({
+              scrollTop: $('.section-download').offset().top
+            }, 1000);
+          }
+        }
+      </script>
+      <script src="./js/auth.js"></script>
+
 </body>
 
 </html>
